Fix bug 301326 - Export to pdf does not respect reports page layout

BUG: 301326